# 5DoF-arm-kenny

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: joint_names_5DoF-arm-kenny.yaml  joint_names_Brazo Robotico.SLDASM.yaml
launch/: display.launch  gazebo.launch
meshes/:  link1.STL  L1.STL  L2.STL  L3.STL  base_link.STL  link 4.STL  link2.STL  link3.STL
urdf/: 5DoF-arm-kenny.urdf  Brazo Robotico.SLDASM.urdf
